--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>HCI Group Project</title>
   <meta content="This a hand gesture based feedback system for web browsing experience" name="description">
   <meta content="HCI,CS449,CS549,Google,Mediapipe,Hand,Gesture,Recognition" name="keywords">
-  
+
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
@@ -15,7 +15,9 @@
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com" rel="preconnect">
   <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+    rel="stylesheet">
 
   <!-- Vendor CSS Files -->
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -26,35 +28,11 @@
   <link href="assets/css/popup.css" rel="stylesheet">
   <!-- Main CSS File -->
   <link href="assets/css/main.css" rel="stylesheet">
-<style>
-   #webcam-container {
-      position: relative;
-      display: inline-block;
-      width: 640px;
-      height: 480px;
-    }
-    #webcam {
-      transform: scaleX(-1); /* Mirror the webcam feed */
-      width: 640px;
-      height: 480px;
-    }
-    #gesture-msg {
-      position: absolute;
-      top: 10px;
-      left: 10px;
-      font-size: 24px;
-      color: white;
-      background-color: rgba(0, 0, 0, 0.5);
-      padding: 10px;
-      border-radius: 5px;
-      display: none;
-    }
-  </style>
-  
+
 </head>
 
 <body class="index-page">
-  
+
   <header id="header" class="header dark-background d-flex flex-column">
     <i class="header-toggle d-xl-none bi bi-list"></i>
 
@@ -80,41 +58,68 @@
         <li><a href="#about"><i class="bi bi-person navicon"></i> About</a></li>
         <li><a href="#portfolio"><i class="bi bi-images navicon"></i> Portfolio</a></li>
         <li><a href="#contact"><i class="bi bi-envelope navicon"></i> Contact</a></li>
-        <li><button id="open_survey" style="text-decoration: none; padding: 10px 10px; border-radius: 10px; background-color: #FFD700; color: black;font-weight:Bold;"> Your Survey, Your Prize!</button></li>
+        <li><button id="open_survey"
+            style="text-decoration: none; padding: 10px 10px; border-radius: 10px; background-color: #FFD700; color: black;font-weight:Bold;">
+            Your Survey, Your Prize!</button></li>
       </ul>
     </nav>
 
   </header>
 
   <main class="main">
-    
-   <!-- Pop-up section-->
-    <div id="survey_popup" class="modalx">
-    <div class="modalx-content">
-      <div class="modalx-header">
-        <span class="closex">&times;</span>
-      </div>
-      <div class="modalx-body">
-        <div id="webcam-container">
-          <video id="video" width="640" height="480" autoplay playsinline></video>
-          <script type="module" src="assets/MediaPipe_lib/hand_gesture_recog.js"></script>
 
-          <div id="gesture-msg"></div>
+    <!-- Pop-up section-->
+    <div id="survey_popup" class="modalx">
+      <div class="modalx-content">
+        <div class="modalx-header">
+          <span class="closex">&times;</span>
         </div>
-        <div id="finger-msg"></div>
+        <div class="modalx-body">
+          <div id="main_gesture">Like/Dislike</div>
+          <div id="star_gesture" style="display: none;">Star Gesture</div>
+          <div id="voice_gesture" style="display: none;">Voice feedback</div>
+          <div id="thank_you" style="display: none;">Thank you</div>
+
+
+          <button onclick="showDiv('star_gesture')">Show Star Gesture</button>
+          <button onclick="showDiv('voice_gesture')">Show Voice Feedback</button>
+          <button onclick="showDiv('thank_you')">Show Thank You</button>
+
+          <script>
+            function showDiv(divId) {
+              const divs = ['main_gesture', 'star_gesture', 'voice_gesture', 'thank_you'];
+              divs.forEach(id => {
+                const div = document.getElementById(id);
+                if (id === divId) {
+                  div.style.display = 'block';
+                } else {
+                  div.style.display = 'none';
+                }
+              });
+            }
+          </script>
+
+          <div id="webcam-container">
+            <video id="video" width="640" height="480" autoplay playsinline></video>
+            <script type="module" src="assets/MediaPipe_lib/hand_gesture_recog.js"></script>
+
+            <div id="gesture-msg"></div>
+
+          </div>
+          <div id="finger-msg"></div>
+        </div>
       </div>
     </div>
-  </div>
-   <!-- END Pop-up section-->
-    
+    <!-- END Pop-up section-->
+
     <!-- Home Section -->
     <section id="Home_page" class="hero section dark-background">
       <img src="assets/img/hero-bg.jpg" alt="" data-aos="fade-in" class="">
       <div class="container" data-aos="fade-up" data-aos-delay="100">
         <h2>HCI MediaPipe</h2>
-      </br>
+        </br>
         <h2>Gesture-based feedback</h2>
-         </div>
+      </div>
 
     </section><!-- /Home Section -->
 
@@ -124,7 +129,9 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>About</h2>
-        <p>Google MediaPipe's Hand Gesture Recognition solution is a powerful tool for real-time hand gesture detection and interpretation.It leverages a combination of machine learning models to accurately identify and track hand landmarks, enabling a wide range of applications.</p>
+        <p>Google MediaPipe's Hand Gesture Recognition solution is a powerful tool for real-time hand gesture detection
+          and interpretation.It leverages a combination of machine learning models to accurately identify and track hand
+          landmarks, enabling a wide range of applications.</p>
       </div><!-- End Section Title -->
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
@@ -136,7 +143,8 @@
           <div class="col-lg-8 content">
             <h2>UI/UX Designer &amp; Web Developer.</h2>
             <p class="fst-italic py-3">
-             Hand Gesture Recognition solution is a powerful tool that enables real-time detection and interpretation of hand gestures
+              Hand Gesture Recognition solution is a powerful tool that enables real-time detection and interpretation
+              of hand gestures
             </p>
             <div class="row">
               <div class="col-lg-6">
@@ -157,7 +165,10 @@
               </div>
             </div>
             <p class="py-3">
-              Beyond virtual worlds, MediaPipe finds applications in human-computer interaction. It allows for hands-free control of devices and software, making technology more accessible to people with disabilities. Additionally, it can be used to create innovative gaming experiences, where players can interact with games using hand gestures.
+              Beyond virtual worlds, MediaPipe finds applications in human-computer interaction. It allows for
+              hands-free control of devices and software, making technology more accessible to people with disabilities.
+              Additionally, it can be used to create innovative gaming experiences, where players can interact with
+              games using hand gestures.
             </p>
           </div>
         </div>
@@ -167,7 +178,7 @@
     </section><!-- /About Section -->
 
 
-   
+
 
     <!-- Portfolio Section -->
     <section id="portfolio" class="portfolio section light-background">
@@ -175,7 +186,9 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Portfolio</h2>
-        <p>In the realm of virtual and augmented reality, MediaPipe empowers users to interact with digital environments naturally, using hand gestures to manipulate objects, navigate spaces, and control experiences. This level of intuitive interaction enhances immersion and realism.</p>
+        <p>In the realm of virtual and augmented reality, MediaPipe empowers users to interact with digital environments
+          naturally, using hand gestures to manipulate objects, navigate spaces, and control experiences. This level of
+          intuitive interaction enhances immersion and realism.</p>
       </div><!-- End Section Title -->
 
       <div class="container">
@@ -196,8 +209,10 @@
                 <div class="portfolio-info">
                   <h4>App 1</h4>
                   <p>Lorem ipsum, dolor sit amet consectetur</p>
-                  <a href="assets/img/portfolio/app-1.jpg" title="App 1" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                  <a href="assets/img/portfolio/app-1.jpg" title="App 1" data-gallery="portfolio-gallery-app"
+                    class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <a href="portfolio-details.html" title="More Details" class="details-link"><i
+                      class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
             </div><!-- End Portfolio Item -->
@@ -208,8 +223,11 @@
                 <div class="portfolio-info">
                   <h4>Product 1</h4>
                   <p>Lorem ipsum, dolor sit amet consectetur</p>
-                  <a href="assets/img/portfolio/product-1.jpg" title="Product 1" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                  <a href="assets/img/portfolio/product-1.jpg" title="Product 1"
+                    data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i
+                      class="bi bi-zoom-in"></i></a>
+                  <a href="portfolio-details.html" title="More Details" class="details-link"><i
+                      class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
             </div><!-- End Portfolio Item -->
@@ -220,8 +238,10 @@
                 <div class="portfolio-info">
                   <h4>App 2</h4>
                   <p>Lorem ipsum, dolor sit amet consectetur</p>
-                  <a href="assets/img/portfolio/app-2.jpg" title="App 2" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                  <a href="assets/img/portfolio/app-2.jpg" title="App 2" data-gallery="portfolio-gallery-app"
+                    class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <a href="portfolio-details.html" title="More Details" class="details-link"><i
+                      class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
             </div><!-- End Portfolio Item -->
@@ -232,8 +252,11 @@
                 <div class="portfolio-info">
                   <h4>Product 2</h4>
                   <p>Lorem ipsum, dolor sit amet consectetur</p>
-                  <a href="assets/img/portfolio/product-2.jpg" title="Product 2" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                  <a href="assets/img/portfolio/product-2.jpg" title="Product 2"
+                    data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i
+                      class="bi bi-zoom-in"></i></a>
+                  <a href="portfolio-details.html" title="More Details" class="details-link"><i
+                      class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
             </div><!-- End Portfolio Item -->
@@ -244,8 +267,10 @@
                 <div class="portfolio-info">
                   <h4>App 3</h4>
                   <p>Lorem ipsum, dolor sit amet consectetur</p>
-                  <a href="assets/img/portfolio/app-3.jpg" title="App 3" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                  <a href="assets/img/portfolio/app-3.jpg" title="App 3" data-gallery="portfolio-gallery-app"
+                    class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <a href="portfolio-details.html" title="More Details" class="details-link"><i
+                      class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
             </div><!-- End Portfolio Item -->
@@ -256,8 +281,11 @@
                 <div class="portfolio-info">
                   <h4>Product 3</h4>
                   <p>Lorem ipsum, dolor sit amet consectetur</p>
-                  <a href="assets/img/portfolio/product-3.jpg" title="Product 3" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                  <a href="assets/img/portfolio/product-3.jpg" title="Product 3"
+                    data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i
+                      class="bi bi-zoom-in"></i></a>
+                  <a href="portfolio-details.html" title="More Details" class="details-link"><i
+                      class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
             </div><!-- End Portfolio Item -->
@@ -270,8 +298,8 @@
 
     </section><!-- /Portfolio Section -->
 
-   
-   <!-- Contact Section -->
+
+    <!-- Contact Section -->
     <section id="contact" class="contact section">
 
       <!-- Section Title -->
@@ -311,7 +339,10 @@
                 </div>
               </div><!-- End Info Item -->
 
-              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d102719.3320842239!2d29.254778828027355!3d40.94270477997428!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14cad852306a76b5%3A0x7c73e4bdab503610!2sSabanc%C4%B1%20University!5e1!3m2!1sen!2str!4v1733325208533!5m2!1sen!2str" frameborder="0" style="border:0; width: 100%; height: 270px;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+              <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d102719.3320842239!2d29.254778828027355!3d40.94270477997428!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14cad852306a76b5%3A0x7c73e4bdab503610!2sSabanc%C4%B1%20University!5e1!3m2!1sen!2str!4v1733325208533!5m2!1sen!2str"
+                frameborder="0" style="border:0; width: 100%; height: 270px;" allowfullscreen="" loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
           </div>
 
@@ -363,7 +394,8 @@
 
     <div class="container">
       <div class="copyright text-center ">
-        <p>© <span>Copyright</span> <strong class="px-1 sitename">HCI MediaPipe</strong> <span>Educational purpose only</span></p>
+        <p>© <span>Copyright</span> <strong class="px-1 sitename">HCI MediaPipe</strong> <span>Educational purpose
+            only</span></p>
       </div>
 
     </div>
@@ -371,7 +403,8 @@
   </footer>
 
   <!-- Scroll Top -->
-  <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
+  <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center"><i
+      class="bi bi-arrow-up-short"></i></a>
 
   <!-- Preloader -->
   <div id="preloader"></div>
@@ -392,8 +425,8 @@
   <script src="assets/js/popup.js"></script>
 
 
-  
-  
+
+
 
   <!-- Main JS File -->
   <script src="assets/js/main.js"></script>
