--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
               }
             });
           }
-        </script>
+        </script></br>
         <video id="video" width="640" height="480" autoplay playsinline></video>
         <div id="finger-msg"></div>
         <script type="module" src="assets/MediaPipe_lib/hand_gesture_recog.js"></script>
