--- a/index.html
+++ b/index.html
@@ -75,14 +75,14 @@
           <span class="closex">&times;</span>
         </div>
         <div class="modalx-body">
-          <div id="main_gesture" class="div-container"><video id="video" width="640" height="480" autoplay
+          <div id="main_gesture"><video id="video" width="640" height="480" autoplay
               playsinline></video>
             <script type="module" src="assets/MediaPipe_lib/hand_gesture_recog.js"></script>
             <div id="finger-msg"></div>
           </div>
-          <div id="star_gesture" style="display: none;" class="div-container">Star Gesture</div>
-          <div id="voice_gesture" style="display: none;" class="div-container">Voice feedback</div>
-          <div id="thank_you" style="display: none;" class="div-container">Thank you</div>
+          <div id="star_gesture" style="display: none;">Star Gesture</div>
+          <div id="voice_gesture" style="display: none;">Voice feedback</div>
+          <div id="thank_you" style="display: none;">Thank you</div>
 
 
           <button onclick="showDiv('star_gesture')">Show Star Gesture</button>
