--- a/index.html
+++ b/index.html
@@ -75,8 +75,7 @@
           <span class="closex">&times;</span>
         </div>
         <div class="modalx-body">
-          <div id="main_gesture"><video id="video" width="640" height="480" autoplay
-              playsinline></video>
+          <div id="main_gesture"><video id="video" autoplay playsinline></video>
             <script type="module" src="assets/MediaPipe_lib/hand_gesture_recog.js"></script>
             <div id="finger-msg"></div>
           </div>
