--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <div class="modalx-header">
           <span class="closex">&times;</span>
           <div>
-            <h4>Please give us a Gesture feedback</h4>
+            <h4>Please give us your Gesture feedback</h4>
             <hr>
           </div>
         </div>
