--- a/index.html
+++ b/index.html
@@ -89,13 +89,21 @@
             <div id="finger-msg"></div>
           </div>
           <div id="star_gesture" style="display: none;">
-            <div class="Starimage-container">
+            <div class="LDimage-container">
               <img src="assets/img/stars.png" alt="stars Gesture">
             </div>
           </div>
           <div id="voice_gesture" style="display: none;">Voice feedback</div>
-          <div id="thank_you" style="display: none;">Thank you</div>
+          <div id="thank_you" style="display: none;">
+            <div style="text-align: center;">
+              <h2>Our team uses your feedback to improve the website's usability!</h2>
+            </div>
+            <div class="LDimage-container">
+              <img src="assets/img/thanks.png" alt="Thank you">
 
+            </div>
+          </div>
+          <div style="height: 10px;"></div>
 
           <button onclick="showDiv('star_gesture')">Show Star Gesture</button>
           <button onclick="showDiv('voice_gesture')">Show Voice Feedback</button>
