--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
               <img src="assets/img/Like.jpg" alt="Like Gesture">
               <img src="assets/img/dislike.jpg" alt="Dislike Gesture">
             </div>
-            <video id="video" width="640" height="480" autoplay playsinline></video>
+            <video id="video" width="320" height="240" autoplay playsinline style="text-align: center;"></video>
             <script type="module" src="assets/MediaPipe_lib/hand_gesture_recog.js"></script>
             <div id="finger-msg"></div>
           </div>
