--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
             </div>
           </div>
           <div style="height: 10px;"></div>
-
+          <button onclick="showDiv('main_gesture')">Dis/Like Gesture</button>
           <button onclick="showDiv('star_gesture')">Show Star Gesture</button>
           <button onclick="showDiv('voice_gesture')">Show Voice Feedback</button>
           <button onclick="showDiv('thank_you')">Show Thank You</button>
