--- a/index.html
+++ b/index.html
@@ -92,6 +92,9 @@
             <div class="LDimage-container">
               <img src="assets/img/stars.png" alt="stars Gesture">
             </div>
+            <div class="LDimage-container">
+              <img src="assets/img/number.png" alt="stars Gesture">
+            </div>
           </div>
           <div id="voice_gesture" style="display: none;">Voice feedback</div>
           <div id="thank_you" style="display: none;">
