--- a/pyindex.html
+++ b/pyindex.html
@@ -3,122 +3,160 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Hand Gesture Detection with Notifications</title>
+  <title>Hand Gesture Detection</title>
   <style>
-    canvas {
-      display: block;
-      margin: auto;
-      border: 1px solid #ddd;
+    #webcam {
+      width: 480px;
+      height: 360px;
+      border: 1px solid black;
+    }
+    #output_canvas {
+      position: absolute;
+      top: 0;
+      left: 0;
+      z-index: 1;
+    }
+    #gesture_output {
+      display: none;
+      position: absolute;
+      bottom: 10px;
+      left: 10px;
+      color: white;
+      background-color: rgba(0, 0, 0, 0.7);
+      padding: 10px;
+      font-size: 18px;
+    }
+    #webcamButton {
+      position: fixed;
+      bottom: 10px;
+      left: 10px;
+      padding: 10px;
+      background-color: #007BFF;
+      color: white;
+      border: none;
+      cursor: pointer;
     }
   </style>
-  <script src="https://cdn.jsdelivr.net/npm/@mediapipe/hands/hands.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/@mediapipe/drawing_utils/drawing_utils.min.js"></script>
 </head>
 <body>
-  <video id="video" autoplay playsinline style="display: none;"></video>
-  <canvas id="output"></canvas>
+  <video id="webcam" autoplay playsinline></video>
+  <canvas id="output_canvas"></canvas>
+  <div id="gesture_output"></div>
+  <button id="webcamButton">ENABLE PREDICTIONS</button>
 
-  <script>
-    const videoElement = document.getElementById('video');
-    const canvasElement = document.getElementById('output');
-    const canvasCtx = canvasElement.getContext('2d');
+  <script type="module">
+    import { GestureRecognizer, FilesetResolver, DrawingUtils } from "https://cdn.jsdelivr.net/npm/@mediapipe/tasks-vision@0.10.3";
 
-    // Mediapipe Hands setup
-    const hands = new Hands({
-      locateFile: (file) => `https://cdn.jsdelivr.net/npm/@mediapipe/hands/${file}`,
-    });
+    let gestureRecognizer;
+    let runningMode = "IMAGE";
+    let webcamRunning = false;
 
-    hands.setOptions({
-      maxNumHands: 1,
-      modelComplexity: 1,
-      minDetectionConfidence: 0.5,
-      minTrackingConfidence: 0.5,
-    });
+    // Initialize GestureRecognizer
+    const createGestureRecognizer = async () => {
+      const vision = await FilesetResolver.forVisionTasks(
+        "https://cdn.jsdelivr.net/npm/@mediapipe/tasks-vision@0.10.3/wasm"
+      );
+      gestureRecognizer = await GestureRecognizer.createFromOptions(vision, {
+        baseOptions: {
+          modelAssetPath:
+            "https://storage.googleapis.com/mediapipe-models/gesture_recognizer/gesture_recognizer/float16/1/gesture_recognizer.task",
+          delegate: "GPU"
+        },
+        runningMode: runningMode
+      });
+    };
+    createGestureRecognizer();
 
-    hands.onResults(onResults);
+    const videoElement = document.getElementById("webcam");
+    const canvasElement = document.getElementById("output_canvas");
+    const canvasCtx = canvasElement.getContext("2d");
+    const gestureOutput = document.getElementById("gesture_output");
+    const enableWebcamButton = document.getElementById("webcamButton");
 
-    // Request notification permission
-    if (Notification.permission !== "granted") {
-      Notification.requestPermission();
+    // Check if webcam access is supported
+    function hasGetUserMedia() {
+      return !!(navigator.mediaDevices && navigator.mediaDevices.getUserMedia);
     }
 
-    // Function to process video frames
-    async function startVideo() {
-      const stream = await navigator.mediaDevices.getUserMedia({ video: true });
-      videoElement.srcObject = stream;
-      videoElement.play();
+    // Start webcam stream when button is clicked
+    if (hasGetUserMedia()) {
+      enableWebcamButton.addEventListener("click", enableCam);
+    } else {
+      console.warn("getUserMedia() is not supported by your browser");
+    }
 
-      // Set up a processing loop
-      function processFrame() {
-        if (videoElement.readyState === videoElement.HAVE_ENOUGH_DATA) {
-          canvasElement.width = videoElement.videoWidth;
-          canvasElement.height = videoElement.videoHeight;
+    // Enable webcam and start predictions
+    function enableCam() {
+      if (webcamRunning === true) {
+        webcamRunning = false;
+        enableWebcamButton.innerText = "ENABLE PREDICTIONS";
+      } else {
+        webcamRunning = true;
+        enableWebcamButton.innerText = "DISABLE PREDICTIONS";
+      }
 
-          canvasCtx.save();
-          canvasCtx.clearRect(0, 0, canvasElement.width, canvasElement.height);
-          canvasCtx.drawImage(videoElement, 0, 0, canvasElement.width, canvasElement.height);
-          hands.send({ image: videoElement });
-          canvasCtx.restore();
+      const constraints = { video: true };
+      navigator.mediaDevices.getUserMedia(constraints).then(function (stream) {
+        videoElement.srcObject = stream;
+        videoElement.addEventListener("loadeddata", predictWebcam);
+      });
+    }
+
+    let lastVideoTime = -1;
+    let results;
+
+    // Real-time webcam predictions
+    async function predictWebcam() {
+      const webcamElement = document.getElementById("webcam");
+
+      if (runningMode === "IMAGE") {
+        runningMode = "VIDEO";
+        await gestureRecognizer.setOptions({ runningMode: "VIDEO" });
+      }
+
+      let nowInMs = Date.now();
+      if (videoElement.currentTime !== lastVideoTime) {
+        lastVideoTime = videoElement.currentTime;
+        results = gestureRecognizer.recognizeForVideo(videoElement, nowInMs);
+      }
+
+      canvasCtx.save();
+      canvasCtx.clearRect(0, 0, canvasElement.width, canvasElement.height);
+
+      canvasElement.style.height = "360px";
+      webcamElement.style.height = "360px";
+      canvasElement.style.width = "480px";
+      webcamElement.style.width = "480px";
+
+      const drawingUtils = new DrawingUtils(canvasCtx);
+
+      if (results.landmarks) {
+        for (const landmarks of results.landmarks) {
+          drawingUtils.drawConnectors(landmarks, GestureRecognizer.HAND_CONNECTIONS, {
+            color: "#00FF00",
+            lineWidth: 5
+          });
+          drawingUtils.drawLandmarks(landmarks, { color: "#FF0000", lineWidth: 2 });
         }
-        requestAnimationFrame(processFrame);
       }
-      processFrame();
-    }
 
-    function onResults(results) {
-      if (results.multiHandLandmarks && results.multiHandLandmarks.length > 0) {
-        for (const landmarks of results.multiHandLandmarks) {
-          // Draw landmarks and connections
-          drawConnectors(canvasCtx, landmarks, HAND_CONNECTIONS, { color: '#00FF00', lineWidth: 4 });
-          drawLandmarks(canvasCtx, landmarks, { color: '#FF0000', lineWidth: 2 });
+      if (results.gestures.length > 0) {
+        gestureOutput.style.display = "block";
+        const categoryName = results.gestures[0][0].categoryName;
+        const categoryScore = parseFloat(results.gestures[0][0].score * 100).toFixed(2);
+        const handedness = results.handednesses[0][0].displayName;
 
-          // Gesture Detection
-          const gesture = detectGesture(landmarks);
-          canvasCtx.fillStyle = 'green';
-          canvasCtx.font = '24px Arial';
-          canvasCtx.fillText(`Gesture: ${gesture}`, 10, 30);
+        gestureOutput.innerText = `GestureRecognizer: ${categoryName}\n Confidence: ${categoryScore} %\n Handedness: ${handedness}`;
+      } else {
+        gestureOutput.style.display = "none";
+      }
 
-          // Show notification when a gesture is detected
-          showNotification(gesture);
-        }
+      canvasCtx.restore();
+
+      if (webcamRunning === true) {
+        window.requestAnimationFrame(predictWebcam);
       }
     }
-
-    function detectGesture(landmarks) {
-      const [thumb, index, middle, ring, pinky] = [
-        landmarks[4],  // Thumb tip
-        landmarks[8],  // Index tip
-        landmarks[12], // Middle tip
-        landmarks[16], // Ring tip
-        landmarks[20], // Pinky tip
-      ];
-
-      const isFingerExtended = (tip, joint) => tip.y < joint.y;
-
-      const thumbExtended = thumb.x > landmarks[3].x;
-      const indexExtended = isFingerExtended(index, landmarks[6]);
-      const middleExtended = isFingerExtended(middle, landmarks[10]);
-      const ringExtended = isFingerExtended(ring, landmarks[14]);
-      const pinkyExtended = isFingerExtended(pinky, landmarks[18]);
-
-      const allFingers = [thumbExtended, indexExtended, middleExtended, ringExtended, pinkyExtended];
-
-      if (allFingers.every(Boolean)) return 'Open Hand';
-      if (allFingers.every((f) => !f)) return 'Closed Hand';
-      if (indexExtended && pinkyExtended && !middleExtended && !ringExtended) return 'Rock & Roll';
-      if (thumbExtended && !allFingers.slice(1).some(Boolean)) return 'Thumbs Up';
-
-      return 'Neutral';
-    }
-
-    function showNotification(gesture) {
-      if (Notification.permission === "granted") {
-        new Notification(`Gesture Detected: ${gesture}`);
-      }
-    }
-
-    // Start the video stream
-    startVideo();
   </script>
 </body>
 </html>
