--- a/pyindex.html
+++ b/pyindex.html
@@ -129,10 +129,10 @@
       if (results.landmarks) {
         for (const landmarks of results.landmarks) {
           drawingUtils.drawConnectors(landmarks, GestureRecognizer.HAND_CONNECTIONS, {
-            color: "#00FF00",
-            lineWidth: 5
+            color: "#00FF0F0",
+            lineWidth: 3
           });
-          drawingUtils.drawLandmarks(landmarks, { color: "#FF0000", lineWidth: 2 });
+          drawingUtils.drawLandmarks(landmarks, { color: "#FF0000", lineWidth: 1 });
         }
       }
 
