--- a/pyindex.html
+++ b/pyindex.html
@@ -129,7 +129,7 @@
       if (results.landmarks) {
         for (const landmarks of results.landmarks) {
           drawingUtils.drawConnectors(landmarks, GestureRecognizer.HAND_CONNECTIONS, {
-            color: "#00FF0F0",
+            color: "#00F00F",
             lineWidth: 3
           });
           drawingUtils.drawLandmarks(landmarks, { color: "#FF0000", lineWidth: 1 });
