--- a/pyindex.html
+++ b/pyindex.html
@@ -146,7 +146,10 @@
       } else {
         gestureOutput.style.display = "none";
       }
-
+  if(categoryName.innerText==="Thumbs_Up")
+            {
+                window.alert("OK");
+            }
       canvasCtx.restore();
 
       if (webcamRunning === true) {
