--- a/pyindex.html
+++ b/pyindex.html
@@ -42,7 +42,7 @@
   <video id="webcam" autoplay playsinline></video>
   <canvas id="output_canvas"></canvas>
   <div id="gesture_output"></div>
-  <button id="webcamButton">ENABLE PREDICTIONS</button>
+ <div> <button id="webcamButton">ENABLE PREDICTIONS</button></div>
 
   <script type="module">
     import { GestureRecognizer, FilesetResolver, DrawingUtils } from "https://cdn.jsdelivr.net/npm/@mediapipe/tasks-vision@0.10.3";
