--- a/pyindex.html
+++ b/pyindex.html
@@ -143,7 +143,7 @@
         const handedness = results.handednesses[0][0].displayName;
 
         gestureOutput.innerText = `GestureRecognizer: ${categoryName}\n Confidence: ${categoryScore} %\n Handedness: ${handedness}`;
-        if (categoryName === "Thumbs_Up") {
+        if (categoryName === "Thumb_Up") {
     alert("Thumbs Up gesture detected!");
   }
       } else {
