--- a/pyindex.html
+++ b/pyindex.html
@@ -144,10 +144,10 @@
 
         gestureOutput.innerText = 'GestureRecognizer: ${categoryName}\n Confidence: ${categoryScore} %\n Handedness: ${handedness}';
         if (categoryName === "Pointing_Up") {
-    window.alret("One 1");
+    alret("One 1");
         }
         if (categoryName === "Victory") {
-    window.alret("Two 2");
+    alret("Two 2");
         }
       } else {
         gestureOutput.style.display = "none";
