--- a/pyindex.html
+++ b/pyindex.html
@@ -142,7 +142,7 @@
         const categoryScore = parseFloat(results.gestures[0][0].score * 100).toFixed(2);
         const handedness = results.handednesses[0][0].displayName;
 
-        gestureOutput.innerText = 'GestureRecognizer: ${categoryName}\n Confidence: ${categoryScore} %\n Handedness: ${handedness}';
+        gestureOutput.innerText = `GestureRecognizer: ${categoryName}\n Confidence: ${categoryScore} %\n Handedness: ${handedness}`;
         if (categoryName === "Pointing_Up") {
     alret("One 1");
         }
