--- a/pyindex.html
+++ b/pyindex.html
@@ -1,164 +1,171 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Hand Gesture Detection</title>
-  <style>
-    #webcam {
-      width: 480px;
-      height: 360px;
-      border: 1px solid black;
-    }
-    #output_canvas {
-      position: absolute;
-      top: 0;
-      left: 0;
-      z-index: 1;
-    }
-    #gesture_output {
-      display: none;
-      position: absolute;
-      bottom: 10px;
-      left: 10px;
-      color: white;
-      background-color: rgba(0, 0, 0, 0.7);
-      padding: 10px;
-      font-size: 18px;
-    }
-    #webcamButton {
-      position: fixed;
-      bottom: 10px;
-      left: 10px;
-      padding: 10px;
-      background-color: #007BFF;
-      color: white;
-      border: none;
-      cursor: pointer;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Hand Gesture Detection</title>
+    <style>
+        #webcam {
+            width: 480px;
+            height: 360px;
+            border: 1px solid black;
+        }
+
+        #output_canvas {
+            position: absolute;
+            top: 0;
+            left: 0;
+            z-index: 1;
+        }
+
+        #gesture_output {
+            display: none;
+            position: absolute;
+            bottom: 10px;
+            left: 10px;
+            color: white;
+            background-color: rgba(0, 0, 0, 0.7);
+            padding: 10px;
+            font-size: 18px;
+        }
+
+        #webcamButton {
+            position: fixed;
+            bottom: 10px;
+            left: 10px;
+            padding: 10px;
+            background-color: #007BFF;
+            color: white;
+            border: none;
+            cursor: pointer;
+        }
+    </style>
 </head>
+
 <body>
-  <video id="webcam" autoplay playsinline></video>
-  <canvas id="output_canvas"></canvas>
-  <div id="gesture_output"></div>
- <div> <button id="webcamButton">ENABLE PREDICTIONS</button></div>
+    <video id="webcam" autoplay playsinline></video>
+    <canvas id="output_canvas"></canvas>
+    <div id="gesture_output"></div>
+    <button id="webcamButton">ENABLE PREDICTIONS</button>
 
-  <script type="module">
-    import { GestureRecognizer, FilesetResolver, DrawingUtils } from "https://cdn.jsdelivr.net/npm/@mediapipe/tasks-vision@0.10.3";
 
-    let gestureRecognizer;
-    let runningMode = "IMAGE";
-    let webcamRunning = false;
+    <script type="module">
+        import { GestureRecognizer, FilesetResolver, DrawingUtils } from "https://cdn.jsdelivr.net/npm/@mediapipe/tasks-vision@0.10.3";
 
-    // Initialize GestureRecognizer
-    const createGestureRecognizer = async () => {
-      const vision = await FilesetResolver.forVisionTasks(
-        "https://cdn.jsdelivr.net/npm/@mediapipe/tasks-vision@0.10.3/wasm"
-      );
-      gestureRecognizer = await GestureRecognizer.createFromOptions(vision, {
-        baseOptions: {
-          modelAssetPath:
-            "https://storage.googleapis.com/mediapipe-models/gesture_recognizer/gesture_recognizer/float16/1/gesture_recognizer.task",
-          delegate: "GPU"
-        },
-        runningMode: runningMode
-      });
-    };
-    createGestureRecognizer();
+        let gestureRecognizer;
+        let runningMode = "IMAGE";
+        let webcamRunning = false;
 
-    const videoElement = document.getElementById("webcam");
-    const canvasElement = document.getElementById("output_canvas");
-    const canvasCtx = canvasElement.getContext("2d");
-    const gestureOutput = document.getElementById("gesture_output");
-    const enableWebcamButton = document.getElementById("webcamButton");
+        // Initialize GestureRecognizer
+        const createGestureRecognizer = async () => {
+            const vision = await FilesetResolver.forVisionTasks(
+                "https://cdn.jsdelivr.net/npm/@mediapipe/tasks-vision@0.10.3/wasm"
+            );
+            gestureRecognizer = await GestureRecognizer.createFromOptions(vision, {
+                baseOptions: {
+                    modelAssetPath:
+                        "https://storage.googleapis.com/mediapipe-models/gesture_recognizer/gesture_recognizer/float16/1/gesture_recognizer.task",
+                    delegate: "GPU"
+                },
+                runningMode: runningMode
+            });
+        };
+        createGestureRecognizer();
 
-    function hasGetUserMedia() {
-      return !!(navigator.mediaDevices && navigator.mediaDevices.getUserMedia);
-    }
+        const videoElement = document.getElementById("webcam");
+        const canvasElement = document.getElementById("output_canvas");
+        const canvasCtx = canvasElement.getContext("2d");
+        const gestureOutput = document.getElementById("gesture_output");
+        const enableWebcamButton = document.getElementById("webcamButton");
 
-    if (hasGetUserMedia()) {
-      enableWebcamButton.addEventListener("click", enableCam);
-    } else {
-      console.warn("getUserMedia() is not supported by your browser");
-    }
-
-    function enableCam() {
-      if (webcamRunning === true) {
-        webcamRunning = false;
-        enableWebcamButton.innerText = "ENABLE PREDICTIONS";
-      } else {
-        webcamRunning = true;
-        enableWebcamButton.innerText = "DISABLE PREDICTIONS";
-      }
-
-      const constraints = { video: true };
-      navigator.mediaDevices.getUserMedia(constraints).then(function (stream) {
-        videoElement.srcObject = stream;
-        videoElement.addEventListener("loadeddata", predictWebcam);
-      });
-    }
-
-    let lastVideoTime = -1;
-    let results;
-
-    async function predictWebcam() {
-      const webcamElement = document.getElementById("webcam");
-
-      if (runningMode === "IMAGE") {
-        runningMode = "VIDEO";
-        await gestureRecognizer.setOptions({ runningMode: "VIDEO" });
-      }
-
-      let nowInMs = Date.now();
-      if (videoElement.currentTime !== lastVideoTime) {
-        lastVideoTime = videoElement.currentTime;
-        results = gestureRecognizer.recognizeForVideo(videoElement, nowInMs);
-      }
-
-      canvasCtx.save();
-      canvasCtx.clearRect(0, 0, canvasElement.width, canvasElement.height);
-
-      canvasElement.style.height = "360px";
-      webcamElement.style.height = "360px";
-      canvasElement.style.width = "480px";
-      webcamElement.style.width = "480px";
-
-      const drawingUtils = new DrawingUtils(canvasCtx);
-
-      if (results.landmarks) {
-        for (const landmarks of results.landmarks) {
-          drawingUtils.drawConnectors(landmarks, GestureRecognizer.HAND_CONNECTIONS, {
-            color: "#00F00F",
-            lineWidth: 3
-          });
-          drawingUtils.drawLandmarks(landmarks, { color: "#FF0000", lineWidth: 1 });
+        function hasGetUserMedia() {
+            return !!(navigator.mediaDevices && navigator.mediaDevices.getUserMedia);
         }
-      }
 
-      if (results.gestures.length > 0) {
-        gestureOutput.style.display = "block";
-        const categoryName = results.gestures[0][0].categoryName;
-        const categoryScore = parseFloat(results.gestures[0][0].score * 100).toFixed(2);
-        const handedness = results.handednesses[0][0].displayName;
-
-        gestureOutput.innerText = `GestureRecognizer: ${categoryName}\n Confidence: ${categoryScore} %\n Handedness: ${handedness}`;
-        if (categoryName === "Pointing_Up") {
-    alret("One 1");
+        if (hasGetUserMedia()) {
+            enableWebcamButton.addEventListener("click", enableCam);
+        } else {
+            console.warn("getUserMedia() is not supported by your browser");
         }
-        if (categoryName === "Victory") {
-    alret("Two 2");
+
+        function enableCam() {
+            if (webcamRunning === true) {
+                webcamRunning = false;
+                enableWebcamButton.innerText = "ENABLE PREDICTIONS";
+            } else {
+                webcamRunning = true;
+                enableWebcamButton.innerText = "DISABLE PREDICTIONS";
+            }
+
+            const constraints = { video: true };
+            navigator.mediaDevices.getUserMedia(constraints).then(function (stream) {
+                videoElement.srcObject = stream;
+                videoElement.addEventListener("loadeddata", predictWebcam);
+            });
         }
-      } else {
-        gestureOutput.style.display = "none";
-      }
 
-      canvasCtx.restore();
+        let lastVideoTime = -1;
+        let results;
 
-      if (webcamRunning === true) {
-        window.requestAnimationFrame(predictWebcam);
-      }
-    }
-  </script>
+        async function predictWebcam() {
+            const webcamElement = document.getElementById("webcam");
+
+            if (runningMode === "IMAGE") {
+                runningMode = "VIDEO";
+                await gestureRecognizer.setOptions({ runningMode: "VIDEO" });
+            }
+
+            let nowInMs = Date.now();
+            if (videoElement.currentTime !== lastVideoTime) {
+                lastVideoTime = videoElement.currentTime;
+                results = gestureRecognizer.recognizeForVideo(videoElement, nowInMs);
+            }
+
+            canvasCtx.save();
+            canvasCtx.clearRect(0, 0, canvasElement.width, canvasElement.height);
+
+            canvasElement.style.height = "360px";
+            webcamElement.style.height = "360px";
+            canvasElement.style.width = "480px";
+            webcamElement.style.width = "480px";
+
+            const drawingUtils = new DrawingUtils(canvasCtx);
+
+            if (results.landmarks) {
+                for (const landmarks of results.landmarks) {
+                    drawingUtils.drawConnectors(landmarks, GestureRecognizer.HAND_CONNECTIONS, {
+                        color: "#00F00F",
+                        lineWidth: 3
+                    });
+                    drawingUtils.drawLandmarks(landmarks, { color: "#FF0000", lineWidth: 1 });
+                }
+            }
+
+            if (results.gestures.length > 0) {
+                gestureOutput.style.display = "block";
+                const categoryName = results.gestures[0][0].categoryName;
+                const categoryScore = parseFloat(results.gestures[0][0].score * 100).toFixed(2);
+                const handedness = results.handednesses[0][0].displayName;
+
+                gestureOutput.innerText = `GestureRecognizer: ${categoryName}\n Confidence: ${categoryScore} %\n Handedness: ${handedness}`;
+              if (categoryName === "Thumbs_Up") {
+    alert("Thumbs Up gesture detected!");
+  }
+              if (categoryName === "Victory") {
+    alert("Thumbs Up gesture detected!");
+  }
+            } else {
+                gestureOutput.style.display = "none";
+            }
+
+            canvasCtx.restore();
+
+            if (webcamRunning === true) {
+                window.requestAnimationFrame(predictWebcam);
+            }
+        }
+    </script>
 </body>
+
 </html>
