--- a/pyindex.html
+++ b/pyindex.html
@@ -153,7 +153,7 @@
     alert("Thumbs Up gesture detected!");
   }
               if (categoryName === "Victory") {
-    alert("Thumbs Up gesture detected!");
+    alert("Number 2 gesture detected!");
   }
             } else {
                 gestureOutput.style.display = "none";
