--- a/pyindex.html
+++ b/pyindex.html
@@ -49,7 +49,6 @@
     <div id="gesture_output"></div>
     <button id="webcamButton">ENABLE PREDICTIONS</button>
 
-
     <script type="module">
         import { GestureRecognizer, FilesetResolver, DrawingUtils } from "https://cdn.jsdelivr.net/npm/@mediapipe/tasks-vision@0.10.3";
 
@@ -142,44 +141,50 @@
                 }
             }
 
-           if (results.gestures.length > 0) {
-    gestureOutput.style.display = "block";
-    const categoryName = results.gestures[0][0].categoryName;
-    const categoryScore = parseFloat(results.gestures[0][0].score * 100).toFixed(2);
-    const handedness = results.handednesses[0][0].displayName;
+            if (results.gestures.length > 0) {
+                gestureOutput.style.display = "block";
+                const categoryName = results.gestures[0][0].categoryName;
+                const categoryScore = parseFloat(results.gestures[0][0].score * 100).toFixed(2);
+                const handedness = results.handednesses[0][0].displayName;
 
-    // Map gestures to specific values
-    let action;
-    switch (categoryName) {
-        case "Pointing_Up":
-            action = 1;
-            break;
-        case "Victory":
-            action = 2;
-            break;
-        case "Thumb_Up":
-            action = "Like";
-            break;
-        case "Thumb_Down":
-            action = "Dislike";
-            break;
-        case "Closed_fist":
-            action = "Close";
-            break;
-        case "Open_Palm":
-            action = "Submit";
-            break;
-        default:
-            action = "Unknown gesture";
-    }
+                // Map gestures to specific values
+                let action;
+                switch (categoryName) {
+                    case "Pointing_Up":
+                        action = 1;
+                        break;
+                    case "Victory":
+                        action = 2;
+                        break;
+                    case "Thumb_Up":
+                        action = "Like";
+                        break;
+                    case "Thumb_Down":
+                        action = "Dislike";
+                        break;
+                    case "Closed_fist":
+                        action = "Close";
+                        break;
+                    case "Open_Palm":
+                        action = "Submit";
+                        break;
+                    default:
+                        action = "Unknown gesture";
+                }
 
-    // Display the mapped action
-    gestureOutput.innerText = `GestureRecognizer: ${categoryName}\n Action: ${action}\n Confidence: ${categoryScore}%\n Handedness: ${handedness}`;
-    console.log(`Detected gesture: ${categoryName}, Action: ${action}`);
-} else {
-    gestureOutput.style.display = "none";
-}
+                // Display the mapped action
+                gestureOutput.innerText = `GestureRecognizer: ${categoryName}\n Action: ${action}\n Confidence: ${categoryScore}%\n Handedness: ${handedness}`;
+                console.log(`Detected gesture: ${categoryName}, Action: ${action}`);
+            } else {
+                gestureOutput.style.display = "none";
+            }
 
+            canvasCtx.restore();
+
+            if (webcamRunning === true) {
+                window.requestAnimationFrame(predictWebcam);
+            }
+        }
     </script>
 </body>
 
