--- a/pyindex.html
+++ b/pyindex.html
@@ -46,7 +46,7 @@
 <body>
     <video id="webcam" autoplay playsinline></video>
     <canvas id="output_canvas"></canvas>
-    <div id="gesture_output"></div>
+    <div id="gesture_output"></div><br>
     <button id="webcamButton">ENABLE PREDICTIONS</button>
 
     <script type="module">
@@ -162,7 +162,7 @@
                     case "Thumb_Down":
                         action = "Dislike";
                         break;
-                    case "Closed_fist":
+                    case "Closed_Fist":
                         action = "Close";
                         break;
                     case "Open_Palm":
