--- a/pyindex.html
+++ b/pyindex.html
@@ -173,7 +173,7 @@
                 }
 
                 // Display the mapped action
-                gestureOutput.innerText = `GestureRecognizer: ${categoryName}\n Action: ${action}\n Confidence: ${categoryScore}%\n Handedness: ${handedness}`;
+                gestureOutput.innerText = ` Gesture: ${action}\n Confidence: ${categoryScore}%\n Handedness: ${handedness}`;
                 console.log(`Detected gesture: ${categoryName}, Action: ${action}`);
             } else {
                 gestureOutput.style.display = "none";
