--- a/pyindex.html
+++ b/pyindex.html
@@ -14,7 +14,7 @@
 
         #output_canvas {
             position: absolute;
-            top: 0;
+            top: 20%;
             left: 0;
             z-index: 1;
         }
@@ -45,7 +45,8 @@
 
 <body>
     <video id="webcam" autoplay playsinline></video>
-    <canvas id="output_canvas"></canvas>
+    <div>Like / Dislike / 1 / 2 / Close / Submit</div>
+   <div class="output_canvas"> <canvas id="output_canvas"></canvas> </div>
     <div id="gesture_output"></div><br>
     <button id="webcamButton">ENABLE PREDICTIONS</button>
 
@@ -56,7 +57,6 @@
         let runningMode = "IMAGE";
         let webcamRunning = false;
 
-        // Initialize GestureRecognizer
         const createGestureRecognizer = async () => {
             const vision = await FilesetResolver.forVisionTasks(
                 "https://cdn.jsdelivr.net/npm/@mediapipe/tasks-vision@0.10.3/wasm"
@@ -172,9 +172,7 @@
                         action = "Unknown gesture";
                 }
 
-                // Display the mapped action
                 gestureOutput.innerText = ` Gesture: ${action}\n Confidence: ${categoryScore}%\n Handedness: ${handedness}`;
-                console.log(`Detected gesture: ${categoryName}, Action: ${action}`);
             } else {
                 gestureOutput.style.display = "none";
             }
