--- a/pyindex.html
+++ b/pyindex.html
@@ -14,7 +14,7 @@
 
         #output_canvas {
             position: absolute;
-            top: 20%;
+            top: 0;
             left: 0;
             z-index: 1;
         }
@@ -45,10 +45,10 @@
 
 <body>
     <video id="webcam" autoplay playsinline></video>
-    <div>Like / Dislike / 1 / 2 / Close / Submit</div>
-   <div class="output_canvas"> <canvas id="output_canvas"></canvas> </div>
+    <div>Like / Dislike / 1 / 2 / Close / Submit <be><button id="webcamButton">ENABLE PREDICTIONS</button></div>
+   <div> <canvas id="output_canvas"></canvas> </div>
     <div id="gesture_output"></div><br>
-    <button id="webcamButton">ENABLE PREDICTIONS</button>
+    
 
     <script type="module">
         import { GestureRecognizer, FilesetResolver, DrawingUtils } from "https://cdn.jsdelivr.net/npm/@mediapipe/tasks-vision@0.10.3";
