--- a/pyindex.html
+++ b/pyindex.html
@@ -134,10 +134,10 @@
             if (results.landmarks) {
                 for (const landmarks of results.landmarks) {
                     drawingUtils.drawConnectors(landmarks, GestureRecognizer.HAND_CONNECTIONS, {
-                        color: "#00F00F",
-                        lineWidth: 3
+                        color: "FF0000",
+                        lineWidth: 2
                     });
-                    drawingUtils.drawLandmarks(landmarks, { color: "#FF0000", lineWidth: 1 });
+                    drawingUtils.drawLandmarks(landmarks, { color: "#00FF00", lineWidth: 1 });
                 }
             }
 
