--- a/pyindex.html
+++ b/pyindex.html
@@ -31,7 +31,7 @@
         }
 
         #webcamButton {
-            position: fixed;
+            position: relative;
             bottom: 10px;
             left: 10px;
             padding: 10px;
