--- a/pyindex.html
+++ b/pyindex.html
@@ -22,7 +22,7 @@
         #gesture_output {
             display: none;
             position: absolute;
-            bottom: 10px;
+            bottom: 100px;
             left: 10px;
             color: white;
             background-color: rgba(0, 0, 0, 0.7);
@@ -31,7 +31,7 @@
         }
 
         #webcamButton {
-            position: relative;
+            position: fixed;
             bottom: 10px;
             left: 10px;
             padding: 10px;
@@ -45,10 +45,9 @@
 
 <body>
     <video id="webcam" autoplay playsinline></video>
-    <div>Like / Dislike / 1 / 2 / Close / Submit <be><button id="webcamButton">ENABLE PREDICTIONS</button></div>
-   <div> <canvas id="output_canvas"></canvas> </div>
+    <canvas id="output_canvas"></canvas>
     <div id="gesture_output"></div><br>
-    
+    <button id="webcamButton">ENABLE PREDICTIONS</button>
 
     <script type="module">
         import { GestureRecognizer, FilesetResolver, DrawingUtils } from "https://cdn.jsdelivr.net/npm/@mediapipe/tasks-vision@0.10.3";
@@ -56,6 +55,7 @@
         let gestureRecognizer;
         let runningMode = "IMAGE";
         let webcamRunning = false;
+
 
         const createGestureRecognizer = async () => {
             const vision = await FilesetResolver.forVisionTasks(
@@ -134,10 +134,10 @@
             if (results.landmarks) {
                 for (const landmarks of results.landmarks) {
                     drawingUtils.drawConnectors(landmarks, GestureRecognizer.HAND_CONNECTIONS, {
-                        color: "FF0000",
-                        lineWidth: 2
+                        color: "#00F00F",
+                        lineWidth: 3
                     });
-                    drawingUtils.drawLandmarks(landmarks, { color: "#00FF00", lineWidth: 1 });
+                    drawingUtils.drawLandmarks(landmarks, { color: "#FF0000", lineWidth: 1 });
                 }
             }
 
@@ -172,7 +172,9 @@
                         action = "Unknown gesture";
                 }
 
-                gestureOutput.innerText = ` Gesture: ${action}\n Confidence: ${categoryScore}%\n Handedness: ${handedness}`;
+
+                gestureOutput.innerText = `Action: ${action}\n Confidence: ${categoryScore}%\n Handedness: ${handedness}`;
+
             } else {
                 gestureOutput.style.display = "none";
             }
