--- a/pyindex.html
+++ b/pyindex.html
@@ -46,7 +46,8 @@
 <body>
     <video id="webcam" autoplay playsinline></video>
     <canvas id="output_canvas"></canvas>
-    <div id="gesture_output"></div><br>
+    <div>Like / Dislike / 1 / 2/ Close / Submit</div>
+    <div id="gesture_output"></div>
     <button id="webcamButton">ENABLE PREDICTIONS</button>
 
     <script type="module">
