--- a/pyindex.html
+++ b/pyindex.html
@@ -10,6 +10,7 @@
             width: 480px;
             height: 360px;
             border: 1px solid black;
+            transform: scaleX(-1);
         }
 
         #output_canvas {
