--- a/pyindex.html
+++ b/pyindex.html
@@ -10,7 +10,7 @@
             width: 480px;
             height: 360px;
             border: 1px solid black;
-            transform: scaleX(-1);
+            transform: scaleX(-1); 
         }
 
         #output_canvas {
@@ -57,7 +57,6 @@
         let gestureRecognizer;
         let runningMode = "IMAGE";
         let webcamRunning = false;
-
 
         const createGestureRecognizer = async () => {
             const vision = await FilesetResolver.forVisionTasks(
@@ -147,7 +146,14 @@
                 gestureOutput.style.display = "block";
                 const categoryName = results.gestures[0][0].categoryName;
                 const categoryScore = parseFloat(results.gestures[0][0].score * 100).toFixed(2);
-                const handedness = results.handednesses[0][0].displayName;
+                let handedness = results.handednesses[0][0].displayName;
+
+ 
+                if (handedness === "Right") {
+                    handedness = "Left";
+                } else if (handedness === "Left") {
+                    handedness = "Right";
+                }
 
                 // Map gestures to specific values
                 let action;
@@ -173,7 +179,6 @@
                     default:
                         action = "Unknown gesture";
                 }
-
 
                 gestureOutput.innerText = `Action: ${action}\n Confidence: ${categoryScore}%\n Handedness: ${handedness}`;
 
